Add login feature, add get photo endpoint and some tags refactoring
