# service/api/api-handler.go
@@ -7,8 +7,8 @@ import (
 // Handler returns an instance of httprouter.Router that handle APIs registered here
 func (rt *_router) Handler() http.Handler {
 	// Register routes
-	rt.router.GET("/context", rt.wrap(rt.getContextReply))
-	rt.router.GET("/session", rt.doLogin)
+	rt.router.POST("/session", rt.doLogin)
+	//rt.router.PUT("/profiles/:auth_user_id/name", rt.setMyUserName)
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
 
